# polynomial

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  docker-compose.yaml  fly.toml  manage.py  mypy.ini  package.json  pyproject.toml  seed.py  tailwind.config.js
.github/workflows/: ci.yml
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
integrations/: __init__.py  base.py  collector.py  integration.py  models.py  test_utils.py  utils.py
integrations/implementations/: bluesky.py  facebook.py  github.py  google_analytics.py  google_bigquery.py  google_cloud_protected_api.py  google_play_store.py  google_search_console.py  google_sheets.py  grafana.py  hubspot.py  instagram.py  linkedin.py  mailchimp.py  pipedrive.py  plausible.py  postgresql.py  posthog.py  stripe.py  threads.py  twitter.py  youtube.py
mainapp/: admin.py  apps.py  forms.py  google_spreadsheet_export.py  models.py  queries.py  signals.py  tasks.py  urls.py  views.py
mainapp/forms/: __init__.py  base.py  dashboard.py  metric.py  organization.py  signup.py  test_dashboard.py  test_metric.py
mainapp/integrations/: collector.py
mainapp/migrations/: 0001_initial.py  0002_rename_credentials_metric_integration_credentials_and_more.py  0003_alter_metric_integration_id_dashboard_and_more.py  0004_dashboard_name.py  0005_organization_organizationuser_organization_users.py  0006_organizationinvitation_and_more.py  0007_metric_organizations_alter_organizationuser_inviter.py  0008_remove_dashboard_unique_dashboard_user_slug_and_more.py  0009_metric_dashboards_and_more.py  0010_user_last_dashboard_visit_and_more.py  0011_organization_slack_notifications_channel_and_more.py  0012_metric_enable_medals_metric_higher_is_better_and_more.py  0013_alter_metric_enable_medals_marker_and_more.py  0014_metric_last_collect_attempt.py  0015_remove_metric_organizations_metric_organization_and_more.py  0016_metric_target_alter_metric_enable_medals_and_more.py  0017_alter_metric_id.py  0018_int_to_uuid.py  0019_alter_metric_id.py  0020_remove_metric_dashboards.py  0021_metric_description_alter_metric_integration_id.py  0022_metric_should_backfill_daily.py  0023_metric_last_detected_spike_and_more.py  0024_metric_enable_spike_notifications_and_more.py
mainapp/models/: __init__.py  dashboard.py  marker.py  measurement.py  metric.py  organization.py  test_metric.py  test_organization.py  test_user.py  user.py
mainapp/tasks/: __init__.py  error_handling.py  google_spreadsheet_export.py  metric_analyse.py  slack_notifications.py  test_collect.py  test_metric_analyse.py
mainapp/templates/: base.html
mainapp/templatetags/: dashboard_tags.py  debug_tags.py  metric_tags.py  organization_tags.py
mainapp/utils/: charts.py
mainapp/views/: __init__.py  dashboard.py  health.py  marker.py  metric.py  mixins.py  organization.py  organization_invitation.py  test_metric.py  user.py  utils.py
notebooks/: spike_detection.ipynb  vega_spec.ipynb
polynomial/: asgi.py  settings.py  urls.py  wsgi.py
static/: d3-format.min.js  d3-time-format.min.js  flowbite.min.js  flowbite.min.js.map  vega-embed.min.js  vega-embed.min.js.map  vega-lite.min.js  vega-lite.min.js.map  vega.min.js  vega.min.js.map
styles/src/: styles.css
templates/: 400.html  403.html  500.html  base.html
templates/account/: base.html  login.html  signup.html
templates/mainapp/: dashboard.html  dashboard_confirm_delete.html  dashboard_forbidden.html  dashboard_form.html  dashboardmetric_add.html  dashboardmetric_confirm_remove.html  dashboards.html  index.html  integration_list.html  metric_confirm_backfill.html  metric_confirm_delete.html  metric_detail.html  metric_embed.html  metric_error.html  metric_form.html  metric_import.html  metric_invalid_grant.html  metric_list.html  (+14 more)
(+17 files in other folders)
