[tool.poetry]
name = "polynomial"
version = "0.1.0"
description = ""
authors = ["Olivier Corradi <olivier.corradi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
Django = "^5.0"
requests = "^2.28.1"
django-jsonform = "^2.19.0"
environs = {extras = ["django"], version = "^9.5.0"}
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
pandas = "^1.5.2"
requests-oauthlib = "^1.3.1"
django-allauth = "^0.52.0"
whitenoise = {extras = ["brotli"], version = "^6.3.0"}
django-compressor = "^4.3.1"
django-widget-tweaks = "^1.4.12"
django-extensions = "^3.2.3"
matplotlib = "^3.7.1"
vl-convert-python = "^1.1.0"
newrelic = "^8.9.0"
celery = {extras = ["redis"], version = "^5.3.1"}
orjson = "^3.9.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
isort = "^5.11.2"
types-requests = "^2.28.11"
types-psycopg2 = "^2.9.21"
types-oauthlib = "^3.2.0"
pandas-stubs = "^1.5.2"
honcho = "^1.1.0"
ipython = "^8.14.0"
autoflake = "^2.2.0"
notebook = "<7.0.0" # TODO: Remove once https://github.com/django-extensions/django-extensions/issues/1830 is fixed
django-stubs = "^4.2.7"
mypy = "^1.8.0"
celery-types = "^0.22.0"

[tool.isort]
profile = "black"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
