[tool.poetry]
name = "mainapp"
version = "0.1.0"
description = ""
authors = ["Olivier Corradi <olivier.corradi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
Django = "^5.0"
requests = "^2.28.1"
django-jsonform = "^2.23.0"
environs = "^14.3.0"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.5"
pandas = "^2.2.2"
requests-oauthlib = "^2.0.0"
django-allauth = "^0.52.0"
whitenoise = {extras = ["brotli"], version = "^6.3.0"}
django-compressor = "^4.3.1"
django-widget-tweaks = "^1.4.12"
django-extensions = "^3.2.3"
matplotlib = "^3.7.1"
vl-convert-python = "^1.1.0"
newrelic = "^8.9.0"
celery = {extras = ["redis"], version = "^5.3.1"}
orjson = "3.9.15"
slack-sdk = "^3.27.1"
posthog = "^3.19.0"
django-recaptcha = "^4.1.0"
dj-database-url = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^24.3.0"
isort = "^5.11.2"
types-requests = "^2.28.11"
types-psycopg2 = "^2.9.21"
types-oauthlib = "^3.2.0"
pandas-stubs = "^1.5.2"
honcho = "^1.1.0"
ipython = "^8.14.0"
autoflake = "^2.2.0"
notebook = "<7.0.0" # TODO: Remove once https://github.com/django-extensions/django-extensions/issues/1830 is fixed
django-stubs = "^4.2.7"
mypy = "^1.8.0"
celery-types = "^0.22.0"
setuptools = "^74.1.2"
django-debug-toolbar = "^6.2.0"

[tool.isort]
profile = "black"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
